# LdP-Scacchiera

./: .gitignore  CMakeLists.txt
.github/workflows/: codeql-analysis.yml
MISC/: Untitled Diagram.drawio
docs/: README.txt  TODO.txt  Untitled Diagram.drawio  cavinato_notes  file_tree.txt
include/: Alfiere.h  Bot.h  Cavallo.h  Chessboard.h  Game.h  Human.h  Old_Game.h  Pedone.h  Piece.h  Player.h  Re.h  Regina.h  Replay.h  Torre.h  Utilities.h
include/chessgame/: Alfiere.h  Bot.h  Cavallo.h  Chessboard.h  Exception.h  Human.h  Pedone.h  Piece.h  Player.h  Re.h  Regina.h  Torre.h  Utilities.h
lib/: Alfiere.cpp  Bot.cpp  Cavallo.cpp  Chessboard.cpp  Game.cpp  Old_Game.cpp  Pedone.cpp  Piece.cpp  Player.cpp  Re.cpp  Regina.cpp  Replay.cpp  Torre.cpp  Utilities.cpp
lib/chessgame/: Alfiere.cpp  Bot.cpp  Cavallo.cpp  Chessboard copy.cpp  Chessboard.cpp  Human.cpp  Pedone.cpp  Piece.cpp  Player.cpp  Re.cpp  Regina.cpp  Torre.cpp  Utilities.cpp
source/: Alfiere.cpp  Bot.cpp  Cavallo.cpp  Chessboard.cpp  Pedone.cpp  Piece.cpp  Re.cpp  Regina.cpp  Torre.cpp  Utilities.cpp
src/: Scacchiera_test.cpp  out_log.txt  replay.cpp  scacchiera.cpp
